<resources>
    <string name="app_name">STUPP</string>
    <string name="label_map">Campus Map</string>
    <string name="label_event">Events</string>
    <string name="label_places">Places</string>
    <string name="label_to_do_list">To Do List</string>
    <string name="label_check_list">Check List</string>
    <string name="label_help_line">Help Line</string>
    <string name="label_hot">Current Weather</string>
    <string name="weather_location">Halifax</string>
    <string name="weather_temp">16</string>
    <string name="weather_type">Cloudy</string>
    <string name="txt_m_app_recommender">Mobile App Recommender</string>
    <string name="check_status">Done</string>
    <string name="toggle_image">Toggle</string>
    <string name="place_navigate">Navigate To Place</string>
</resources>
