<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/oolorLightBlue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="90dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/campus_icon"
                android:contentDescription="@string/label_map"
                android:src="@drawable/ic_map" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_map"
                android:gravity="center"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/to_do_list_icon"
                android:contentDescription="@string/label_to_do_list"
                android:src="@drawable/ic_to_do" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_to_do_list"
                android:gravity="center"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/places_icon"
                android:contentDescription="@string/label_places"
                android:src="@drawable/ic_stadium" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_places"
                android:gravity="center"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/events_icon"
                android:contentDescription="@string/label_event"
                android:src="@drawable/ic_calendar" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_event"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/check_list_icon"
                android:contentDescription="@string/label_check_list"
                android:src="@drawable/ic_browser" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_check_list"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:id="@+id/help_line_icon"
                android:contentDescription="@string/label_help_line"
                android:src="@drawable/ic_siren" />
            <TextView
                android:fontFamily="@font/cera_rounded_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_help_line"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/weather_icon"
                android:contentDescription="@string/label_hot"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_hot" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather_location"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="22sp"
                    android:fontFamily="@font/cera_rounded_bold"/>

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather_temp"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="18sp"
                    android:fontFamily="@font/cera_rounded_medium"/>

                <TextView
                    android:id="@+id/weather_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather_type"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="15sp"
                    android:fontFamily="@font/cera_rounded_light"/>
                <TextView
                    android:id="@+id/weather_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weather_type"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="12sp"
                    android:fontFamily="@font/cera_rounded_light"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>