<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/oolorLightBlue">

    <ImageView
        android:id="@+id/place_detail_image"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bookstore_1"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/place_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:paddingStart="10dp"
        android:fontFamily="@font/cera_rounded_bold"
        android:padding="7dp"/>
    <TextView
        android:id="@+id/place_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorDarkGrey"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:padding="4dp"/>
    <TextView
        android:id="@+id/place_detail_ratings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorDarkGrey"
        android:paddingStart="10dp"
        android:textSize="13sp"
        android:padding="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/place_detail_navigate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/place_navigate"/>
        <Button
            android:id="@+id/place_detail_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginHorizontal="18dp"
            android:text="@string/toggle_image"/>
    </LinearLayout>

</LinearLayout>